corrected the format in the web template

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -460,7 +460,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Mobile UI End -->
 
         <!-- Algorithms Start -->
@@ -468,13 +468,13 @@
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <h2>Algorithms of the System</h2><br>
-                    <p>Algorithm runs on the hardware module</p>
+                    <p style="font-size: 24px;">Algorithm runs on the hardware module</p>
                 </header>
             </div>
             <img src="img/hardware-flow-v2.png"  style="display: block; margin-left: auto; margin-right: auto; width: 60%; " class="section-header text-center wow zoomIn" alt="Image" data-wow-delay="0.1s">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <br><br><br><p>Algorithm runs on the Mobile Application</p>
+                    <br><p style="font-size: 24px;">Algorithm runs on the Mobile Application</p>
                 </header>
             </div>
             <img src="img/mobile-app-flow-diagram-v2.png"  style="display: block; margin-left: auto; margin-right: auto; width: 50%;" class="section-header text-center wow zoomIn" alt="Image">
@@ -916,7 +916,7 @@
         <!-- Testing End -->
 
 
-        <!-- Cotrol flow Start -->
+        <!-- Scalability Start -->
         <br><br><br>
         <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
             <div class="container-fluid">
@@ -949,6 +949,10 @@
                                     Since we are hoping to provide 1 month of backup data, it will be enough for 5 nodes.
                                     We can reduce the backup size to accommodate more users, or we can switch to paid tier.
                                     Additional 40GBs costs $1 and for that we can provide backup for 40 users.
+                                </p>
+                                <p>
+                                    As a future Implementation, we are going to scale the system to have the ability of
+                                    connecting several users for a single hardware node.
                                 </p>
                             </div>
                         </div>
@@ -1003,7 +1007,7 @@
                 </div>
             </div>
         </div>
-        <!-- Control Flow End -->
+        <!-- Scalability End -->
 
 
         <!-- Team Start -->
