--- a/website-template/index.html
+++ b/website-template/index.html
@@ -38,7 +38,11 @@
                         <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#about" class="nav-item nav-link">Intro</a>
                         <a href="#service" class="nav-item nav-link">Components</a>
-                        <a href="#experience" class="nav-item nav-link">Timeline</a>
+                        <a href="#timeline" class="nav-item nav-link">Timeline</a>
+                        <a href="#bom" class="nav-item nav-link">BOM</a>
+                        <a href="#testing" class="nav-item nav-link">Testing</a>
+                        <a href="#scalability" class="nav-item nav-link">Scalability</a>
+                        <a href="#security" class="nav-item nav-link">Security</a>
                         <!-- <a href="#portfolio" class="nav-item nav-link">Portfolio</a> -->
                         <a href="#team" class="nav-item nav-link">Team</a>
                         <!-- <a href="#contact" class="nav-item nav-link">Contact</a> -->
@@ -673,7 +677,7 @@
 
     
          <!-- Timeline Start -->
-        <div class="experience" id="experience">
+        <div class="experience" id="timeline">
             <div class="container">
                 <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
@@ -758,7 +762,7 @@
         <!-- Timeline End -->
         
         <!-- BOM Start -->
-        <div class="banner wow zoomIn" data-wow-delay="0.1s">
+        <div class="banner wow zoomIn" id="bom" data-wow-delay="0.1s">
             <div class="container">
                 <div class="section-header text-center">
                     <p>Proposed on Week 5</p>
@@ -818,7 +822,7 @@
 
 
         <!-- Testing Start -->
-        <div class="banner wow zoomIn" data-wow-delay="0.1s">
+        <div class="banner wow zoomIn" id="testing" data-wow-delay="0.1s">
             <div class="container" style="max-width: 90%;">
                 <div class="section-header text-center">
                     <h2>Testing</h2><br>
@@ -917,8 +921,8 @@
 
 
         <!-- Scalability Start -->
-        <br><br><br>
-        <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
+        <div class="about wow fadeInUp" id="scalability" data-wow-delay="0.4s">
+            <br><br><br>
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-lg-8">
@@ -1011,7 +1015,7 @@
 
 
         <!-- Security Start -->
-        <div class="banner wow zoomIn" data-wow-delay="0.1s">
+        <div class="banner wow zoomIn" id="security" data-wow-delay="0.1s">
             <div class="container" style="max-width: 1000px;">
                 <div class="section-header text-center">
                     <h2>Security Aspects</h2>
