update project page template

--- a/website-template/index.html
+++ b/website-template/index.html
@@ -402,7 +402,7 @@
                     <h2>Mobile Application</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
                             <div class="blog-img">
                                 <img src="img/mobile-ui1.png" alt="Image">
@@ -412,7 +412,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mobile-ui2.png" alt="Image">
@@ -422,7 +422,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mobile-ui3.png" alt="Image">
@@ -432,7 +432,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mobile-ui4.png" alt="Image">
@@ -442,7 +442,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mobile-ui5.png" alt="Image">
@@ -452,7 +452,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mobile-ui6.png" alt="Image">
@@ -467,6 +467,59 @@
         </div>
         <!-- Mobile UI End -->
 
+
+        <!-- Web UI Start -->
+        <div class="blog" id="blog"> 
+            <div class="container">
+                <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
+                    <p>UX-UI Design</p>
+                    <h2>Web Application</h2>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
+                            <div class="blog-img">
+                                <img src="img/web_ui1.PNG" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h6>Home Page</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="blog-img">
+                                <img src="img/web_ui2.PNG" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h6>Login From</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="blog-img">
+                                <img src="img/web_ui3.PNG" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h6>Signup From</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
+                            <div class="blog-img">
+                                <img src="img/web_ui4.PNG" alt="Image">
+                            </div>
+                            <div class="blog-text">
+                                <h6>Dashboard</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Web UI End -->
         <!-- Algorithms Start -->
         <div class="experience" id="experience">
             <div class="container">
@@ -490,12 +543,12 @@
         <div class="about wow fadeInUp" data-wow-delay="0.4s" id="about">
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-sm-6">
                         <div class="about-img">
                             <img src="img/database-schema.png" alt="Image">
                         </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-sm-6">
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>how we store the data</p>
@@ -520,14 +573,14 @@
         <!-- Data Schemata End -->
 
         <!-- 3D Model Start -->
-         <div class="blog" id="blog"> 
+        <div class="blog" id="blog"> 
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>Physical designs of our system</p>
                     <h2>3D Models</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 offset-lg-2">
+                    <div class="col-lg-4 offset-lg-2 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
                             <div class="blog-img">
                                 <img src="img/front-end-view.png" alt="Blog">
@@ -539,7 +592,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/isometric-view.png" alt="Blog">
@@ -611,7 +664,7 @@
                     <h2>Sensors and Actuators</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
                             <div class="blog-img">
                                 <img src="img/camera.jpg" width="50%" alt="Blog">
@@ -628,7 +681,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/lcd2.jpg" width="50%" alt="Blog">
@@ -642,7 +695,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.1s">
                             <div class="blog-img">
                                 <img src="img/servo.jpg" width="50%"  alt="Blog">
@@ -656,7 +709,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-3 col-sm-6">
                         <div class="blog-item wow fadeInUp" data-wow-delay="0.3s">
                             <div class="blog-img">
                                 <img src="img/mic.jpg" width="50%"  alt="Blog">
@@ -925,7 +978,7 @@
             <br><br><br>
             <div class="container-fluid">
                 <div class="row align-items-center">
-                    <div class="col-lg-8">
+                    <div class="col-sm-8 ">
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>bakcend services</p>
@@ -961,7 +1014,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-sm-4">
                         <div class="about-img">
                             <img src="img/firebase-quota.png" alt="Image">
                         </div>
@@ -1082,7 +1135,7 @@
                     <h2>Team Members</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.0s">
+                    <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-1.jpg" alt="Image">
@@ -1099,7 +1152,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4  col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-2.jpg" alt="Image">
@@ -1116,7 +1169,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4  wow fadeInUp" data-wow-delay="0.4s">
+                    <div class="col-lg-4  col-sm-6  offset-sm-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-3.jpg" alt="Image">
@@ -1138,7 +1191,7 @@
                     <h2>Advisors</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 offset-lg-2 wow fadeInUp" data-wow-delay="0.0s">
+                    <div class="col-lg-4 col-sm-6 offset-lg-2 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-4.jpg" alt="Image">
@@ -1153,7 +1206,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
                                 <img src="img/team-5.png" alt="Image">
